--- a/index.html
+++ b/index.html
@@ -77,8 +77,18 @@
     font-size: 80px;
 }
 @media (max-width:592px){
+
     .container{
         margin: 30px 00px;
+    }
+    #king{
+      
+        width: 90%;
+        height: 75%;
+        border: 2px solid red;
+        border-radius: 10px;
+        background-color: red;
+        box-shadow: 2px 1px 2px 2px gold;
     }
 
 
