--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         margin: 30px 00px;
     }
     #king{
-      
-        width: 90%;
+      margin-left: 20px;
+        width: 80%;
         height: 75%;
         border: 2px solid red;
         border-radius: 10px;
